# pneumaticworkflow

./: .gitignore  .pre-commit-config.yaml  AI_GENERATION.md  API_PLAN_templates.md  CHANGES.md  CLAUDE.md  DEPLOYMENT.md  DOCKER_BUILD.md  FINAL_STATUS.md  LICENSE  QUICKSTART.md  QUICK_FIX.md  README.md  RUN_BRANCH.md  SYSTEM_PROMPT.md  TROUBLESHOOTING.md  build-images.sh  default-project.env  default.env  docker-compose.dev.yml  docker-compose.src.yml  docker-compose.yml  start.sh
core/: .dockerignore  .env_local  .gitignore  .pre-commit-config.yaml  .pylintrc  .start.sh  Dockerfile  README.md  asgi.py  codestyle.ini  default.env  manage.py  pyproject.toml  pytest.ini  settings.py
core/accounts/: apps.py  fields.py  managers.py  models.py  queries.py  tokens.py
core/accounts/migrations/: 0007_auto_20191003_1030.py  0011_account_is_onboarding_finished.py  0036_user_is_admin.py  0037_accountapplication.py  0043_delete_clearbituserinfo.py  0058_auto_20201126_1312.py  0062_auto_20201210_0929.py  0065_merge_20201221_0741.py  0076_alter_model_20210512_0652.py  0083_auto_20211005_1241.py  0089_user_is_onboarding_finished.py  0090_remove_account_is_subscribed.py  0108_account_tmp_subscription.py  0115_auto_20240201_1615.py  0124_delete_group_add_usergroup.py  0131_add_bucket_name.py
core/accounts/serializers/: accounts.py  api_key.py  notifications.py
core/accounts/services/: __init__.py  group.py  reassign.py
core/accounts/tests/: conftest.py  test_permissions.py
core/accounts/views/: tenants.py  users.py
core/ai/: models.py
core/ai/tests/: fixtures.py
core/analytics/: services.py  tasks.py
core/analytics/customerio/: exceptions.py  serializers.py  urls.py
core/analytics/tests/: conftest.py
core/applications/: models.py  querysets.py
core/applications/tests/: conftest.py
core/authentication/: __init__.py  serializers.py  tasks.py  tokens.py
core/authentication/migrations/: 0001_initial.py
core/authentication/services/: __init__.py  auth0.py  guest_auth.py  public_auth.py
core/authentication/views/: mixins.py  signup.py
core/faq/: apps.py  views.py
core/generics/: fields.py  models.py  permissions.py
core/generics/base/: service.py
core/logs/: service.py
core/logs/migrations/: 0002_accountevent_direction.py  0003_auto_20240820_1952.py  0006_accountevent_title.py
core/logs/tests/: test_service.py
core/navigation/: admin.py  serializers.py
core/notifications/: enums.py
core/notifications/services/: base.py  email.py  exceptions.py  push.py
core/pages/: models.py  serializers.py
core/pages/tests/: conftest.py
core/payment/: apps.py  messages.py  models.py  querysets.py  tasks.py
core/payment/migrations/: 0005_product_stripe_id.py  0009_price_min_quantity.py  0012_auto_20230818_1307.py
core/payment/services/: account.py  exceptions.py
core/payment/stripe/: entities.py  mixins.py  permissions.py  service.py  webhooks.py
core/payment/tests/: conftest.py
core/pneumatic_backend/: asgi.py  asgi_handler.py  celery.py  consumers.py  executor.py  settings.py  urls.py  views.py  wsgi.py
core/pneumatic_backend/accounts/: __init__.py  admin.py  entities.py  enums.py  filters.py  forms.py  messages.py  models.py  permissions.py  queries.py  querysets.py  tasks.py  throttling.py  urls.py  validators.py
core/pneumatic_backend/ai/: admin.py  apps.py  enums.py  querysets.py
core/pneumatic_backend/analytics/: actions.py  apps.py  enums.py  events.py  exceptions.py  labels.py  messages.py  mixins.py  services.py  tasks.py  urls.py
core/pneumatic_backend/applications/: __init__.py  admin.py  apps.py  serializers.py  urls.py  views.py
core/pneumatic_backend/authentication/: apps.py  entities.py  enums.py  messages.py  middleware.py  models.py  permissions.py  queries.py  serializers.py  throttling.py  urls.py
core/pneumatic_backend/faq/: admin.py  models.py  querysets.py  serializers.py  views.py
core/pneumatic_backend/generics/: entities.py  exceptions.py  fields.py  filters.py  managers.py  messages.py  paginations.py  parsers.py  permissions.py  querysets.py  routers.py  serializers.py  throttling.py
core/pneumatic_backend/logs/: admin.py  enums.py  filters.py  models.py  service.py  utils.py
core/pneumatic_backend/navigation/: __init__.py  apps.py  enums.py  models.py  urls.py  views.py
core/pneumatic_backend/notifications/: admin.py  apps.py  consumers.py  enums.py  messages.py  models.py  permissions.py  queries.py  querysets.py  serializers.py  tasks.py  urls.py  views.py
core/pneumatic_backend/pages/: admin.py  (+5 more)
core/processes/: apps.py  filters.py  parsers.py  querysets.py
core/reports/: serializers.py  urls.py
core/services/: email.py
core/tests/: Dockerfile  docker-compose.yml  run_tests.sh
core/utils/: user_agent.py  validation.py
core/webhooks/: serializers.py
storage/: .dockerignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
storage/seaweedfs/: filer.toml  s3.json
storage/src/: main.py
storage/tests/: conftest.py
(+5593 files in other folders)
