[tool.poetry]
name = "pneumatic-files"
version = "1.0.0"
description = "File proxy microservice with Google Cloud Storage"
authors = ["Pneumatic Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
uvicorn = "0.35.0"
python-multipart = "0.0.20"
sqlalchemy = "2.0.42"
asyncpg = "0.30.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
aioboto3 = "15.0.0"
httpx = "0.28.1"
redis = "6.2.0"
alembic = "1.16.4"
PyJWT = "2.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.18.2"
ruff = "0.14.0"
pre-commit = "4.3.0"
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-mock = "^3.15.1"
aiosqlite = "^0.21.0"
types-redis = "^4.6.0.20241004"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
